--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
+    - name: Setup 361Capstone.NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
